import React from 'react'
import LoginForm from '../../../components/Login/LoginForm'
import { mount, render, shallow } from 'enzyme'

describe('Testing LoginForm', () => {
    test('component renders', () => {
        const component = shallow(<LoginForm className="form test"/>)
        expect(component).toMatchSnapshot()
    })
    test('Component renders without props', () => {
        const component = shallow(<LoginForm  />)
        expect(component).toMatchSnapshot()
    })
    test('Component sends login', () => {
        const component = shallow(<LoginForm />)
    })
})